--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">MyBookReview
-                    <small>Secondary Text</small>
+                    <small>Second Text</small>
                 </h1>
             </div>
         </div>
